--- a/pom.xml
+++ b/pom.xml
@@ -1,2 +1,9 @@
-this is testing
+<html>
+<body>
+<h1>maven : version 1</h1>
+
+<h3>Message : ${message}</h3>
+<h3>Counter : ${counter}</h3>
+</body>
+</html>
 
